chore(TPRUN-6340): CVE-2023-34462 Update  io.netty netty-handler:4.1.94.Final (#1010)
**What is the problem this Pull Request is trying to solve?**
 CVE-2023-34462 Update  io.netty netty-handler:4.1.94.Final

**What is the chosen solution to this problem?**
 Update spring boot 3.1.2, logback and slf4j and fix TU following  https://github.com/spring-projects/spring-boot/issues/36177

**Link to the JIRA issue**
<!--e.g. https://jira.talendforge.org/browse/XXX -->
 
**Please check if the Pull Request fulfills these requirements**
- [ ] The PR commit message follows our
[guidelines](https://github.com/Talend/daikon/blob/master/CONTRIBUTING.md)
- [ ] Tests for the changes have been added (for bug fixes / features,
coverage should be over 75% in the new code)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] Related design / discussions / pages (not in JIRA), if any, are
all linked or available in the Pull Request

<!-- You can add more checkboxes here -->
 
**[ ] This Pull Request introduces a breaking change**
 
<!-- **Original Template** -->
<!--
https://github.com/Talend/tools/blob/master/tools-root-github/.github/PULL_REQUEST_TEMPLATE.md
-->